# ecqm-content-qicore-2024

./: .gitignore  QICoreUpdateProcess.md  README.md  _extractAllMATBundles.bat  _extractAllMATBundles.sh  _extractMATBundle.bat  _extractMATBundle.sh  _refresh.bat  _refresh.sh  _updateCQFTooling.bat  _updateCQFTooling.sh  ig.ini
input/: ecqm-content-qicore-2024.xml
input/cql/: AHAOverall.cql  ALARACTOQRFHIR.cql  AdultOutpatientEncounters.cql  AdvancedIllnessandFrailty.cql  AlaraCTClinicalFHIR.cql  AlaraCTIQRFHIR.cql  AnticoagulationTherapyforAtrialFibrillationFlutterFHIR.cql  AntidepressantMedicationManagementFHIR.cql  AntithromboticTherapyByEndofHospitalDay2FHIR.cql  AppropriateDXAScansForWomenUnder65FHIR.cql  AppropriateTestingforPharyngitisFHIR.cql  AppropriateTreatmentforSTEMIFHIR.cql  AppropriateTreatmentforUpperRespiratoryInfectionURIFHIR.cql  AttributionModel.cql  BoneDensityProstateCancerAndrogenDeprivationTherapyFHIR.cql  BreastCancerScreeningFHIR.cql  CADBetaBlockerTherapyPriorMIorLVSDFHIR.cql  CMS1017HHFIFHIR.cql  CMS1028FHIRPCSevereOBComps.cql  CMS104FHIRSTKDCAntithrombotic.cql  CMS1074AlaraCTIQRFHIR.cql  CMS1206ALARACTOQRFHIR.cql  CMS190VTEProphylaxisICUFHIR.cql  CMS334FHIRPCCesareanBirth.cql  CMS506FHIRSafeUseofOpioids.cql  CMS72FHIRSTKAntithromboticDay2.cql  (+74 more)
scripts/: Makefile  analyze_valuesets.py  convert_valueset.py  generate_valuesets.py  load_valuesets.py  mypy.ini  pyproject.toml  update_valuesets.py
scripts/vsac-valueset-fetcher/: .env  pyproject.toml
scripts/vsac-valueset-fetcher/vsac_valueset_fetcher/: base.py  valueset_fetcher.py
(+56269 files in other folders)
