[tool.poetry]
name = "measure-loader"
version = "0.1.0"
description = ""
authors = ["Matt McSorley <matt.mcsorley@recoverx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fhirclient = "^4.2.1"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
