[tool.poetry]
name = "vsac-valueset-fetcher"
version = "0.1.0"
description = ""
authors = ["Arnav <arnav.saxena@recoverx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pydantic = "^2.9.2"
pandas = "^2.2.3"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
